<resources>
    <string name="app_name">易读英语</string>

    <!--工具类-->
    <string name="net_expection">网络状态获取失败</string>
    <string name="net_not_connect">网络未连接，请连接后重试</string>
    <string name="database_empty">数据库没有数据</string>

    <!--主页-->
    <string name="user_nick">昵称</string>
    <string name="title_section1">英文文档翻译</string>
    <string name="title_section2">pdf文档翻译</string>
    <string name="title_section3">分享应用</string>
    <string name="title_section4">反馈建议</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fragment_main">This is main fragment!</string>
    <string name="fragment_bottom1">分类英语</string>
    <string name="fragment_bottom2">单词分类</string>
    <string name="fragment_bottom3">已翻译文档</string>
    <string name="fragment_bottom4">分类资讯</string>
    <string name="action_example">设置</string>

    <string name="action_settings">Settings</string>
    <string name="action_back">返回</string>

    <string name="hello_world">Hello world!</string>
    <string name="already_share">已接受的分享</string>
    <string name="already_translate_list">已翻译列表</string>
    <string name="down">下拉图片</string>
    <string name="up">上拉图片</string>
    <string name="classify">请输入分类名称</string>
    <string name="waiting">请稍候正在加载。。。</string>
    <string name="word_list">this is words list</string>
    <string name="open">打开菜单</string>
    <string name="close">关闭菜单</string>


    <color name="light_black">#291f2f</color>
    <color name="white">#ffffffff</color>
    <color name="red">#ffff0000</color>
    <color name="lightred">#ffff8163</color>
    <color name="grey">#161b1531</color>
    <color name="green">#ff009900</color>
    <!--主页-->
    <string name="title_activity_classify">主页</string>
    <string name="press_back_again">再按一次返回键退出</string>
    <string name="article_list">文章列表</string>
    <string name="message">Message</string>
    <string name="title_activity_classify_item2">classifyItem2</string>
    <string name="keji">科技</string>
    <string name="education">教育</string>
    <string name="nature">自然</string>
    <string name="licai">理财</string>
    <string name="jiankang">健康</string>
    <string name="yule">娱乐</string>
    <string name="jingji">经济</string>
    <string name="history">历史</string>
    <string name="other">其他</string>
    <string name="select">choose</string>
    <string name="state">当前time：</string>
    <string name="refresh">正在刷新</string>
    <string name="wait">请等待正在加载图片。。。</string>
    <string name="up_refresh">正在读数据。。。</string>
    <string name="no_data">没有数据</string>
    <string name="load_more">上拉加载更多</string>
    <string name="load_complete">数据加载完成</string>
    <string name="down_refresh">正在从网络获取数据。。。</string>
    <string name="title_activity_refresh">Refresh</string>
    <string name="title_activity_word_classify">WordClassify</string>
    <string name="title_activity_menu_test">MenuTest</string>
    <string name="title_activity_word_meaning">WordMeaning</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_acceptshare">分享到的内容</string>
    <string name="title_activity_already_accept_share">AlreadyAcceptShare</string>
    <string name="title_activity_share_message">ShareMessage</string>
    <string name="title_activity_pdf_parse">pdf解析</string>

    <!--修改信息页面-->
    <string name="sure">确认</string>
    <string name="camera">照相机</string>
    <string name="photo">相册</string>
    <string name="change_name">修改昵称</string>
    <string name="change_icon">修改头像</string>
    <string name="nick_remind">输入的昵称不能为空</string>

    <string name="title_activity_logo">LogoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--pdf解析-->
    <string name="pdf_parse_waiting">正在解析中。。。</string>
    <string name="pdf_parse_fail">解析失败，请检查网络后重试</string>
    <string name="pdf_parse_already">文档已经解析！</string>
    <string name="file_manager_not_exist">还没有安装文件管理器</string>
    <!--显示分类英语和信息页面-->
    <string name="android_elite">Android精华教程</string>
    <string name="android_experience">Android经验</string>
    <string name="android_luo">老罗的Android学习</string>
    <string name="android_src">Android源码学习</string>
    <string name="english_middle">中学英语</string>
    <string name="english_university">大学英语</string>
    <string name="english_china_daily">ChinaDaily</string>
    <string name="android_news">AndroidNews</string>
    <string name="english_wait">待定</string>
    <!--文章列表页面-->
    <string name="title_activity_article_list">ArticleListActivity</string>

    <!--单词分类页面-->
    <string name="word_unknow">unknow</string>
    <string name="word_know">know</string>
    <string name="word_tag">word</string>
    <string name="meaning_tag">meaning</string>
    <string name="no_load_now">还没有加载到当前索引哦</string>
    <string name="word_search_remind">请输入所要查找的单词</string>
    <!--显示文章内容页面-->
    <string name="content_empty">文章内容为空！</string>
    <string name="article_empty">当前没有文章！</string>
    <string name="article_classify">文章列表跳转标志位</string>
    <string name="time">2015-10-18</string>
    <string name="database_no_word">非常抱歉，该词还没有收录本词库，以后会更新哦！</string>
    <string name="modify_word_type_title">修改单词类型</string>
    <string name="modify_word_type_pre">已经成功将该词归类到</string>
    <string name="modify_word_type_after">的单词库中！</string>
    <string name="modify_word_type_remind_pre">确定要将</string>
    <string name="modify_word_type_remind_middle">转为</string>
    <string name="modify_word_type_remind_after">的单词吗？</string>
    <string name="unknow">不认识</string>
    <string name="know">认识</string>

    <string name="title_activity_change_info">ChangeInfoActivity</string>
    <string name="last_update_time">上次更新时间</string>
    <string name="refresh_complete">刷新完成</string>
    <string name="pull_to_refresh">下拉刷新获取数据</string>
    <string name="release_to_refresh">释放刷新数据</string>
</resources>
