<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_height="0dp"
            android:layout_width="match_parent">

            <Button
                android:layout_weight="1"
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/technology"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="25sp"
                android:text="@string/keji"/>

            <Button
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/health"
                android:textSize="25sp"
                android:text="@string/jiankang"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_height="0dp">
            <Button
                android:layout_weight="1"
                android:id="@+id/button3"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/education"
                android:textSize="25sp"
                android:text="@string/education"/>

            <Button
                android:id="@+id/button4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/economy"
                android:textSize="25sp"
                android:text="@string/jingji"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_height="0dp">

            <Button
                android:layout_weight="1"
                android:id="@+id/button5"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/nature"
                android:textSize="25sp"
                android:text="@string/nature"/>

            <Button
                android:id="@+id/button6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/cd"
                android:textSize="25sp"
                android:text="@string/other"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>