<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.liu.easyenglishupdate.ui.ChangeInfoActivity">

    <TextView
        android:id="@+id/tv_change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/hello_world"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/camera"
        android:textColor="@color/light_black"
        android:background="@drawable/change_widget_bg"/>

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:textColor="@color/light_black"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/change_widget_bg"/>

    <LinearLayout
        android:id="@+id/lyt_change_name"
        android:layout_width="280dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_change_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/change_widget_bg"
            android:padding="6dp"
            android:layout_margin="8dp"
            android:textColor="@color/light_black"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_change_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/change_widget_bg"
            android:textColor="@color/light_black"
            android:text="@string/sure"/>

    </LinearLayout>

</LinearLayout>
