<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:id="@+id/pdf_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:textColor="@color/white"
              android:text="@string/fragment_main"/>

    <!-- bottom navigation-->
    <LinearLayout
        android:layout_below="@id/container"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="80dp">

        <LinearLayout
            android:id="@+id/lyt_bottom_item1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:src="@drawable/baidu"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:layout_marginBottom="2dp"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/fragment_bottom1"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_bottom_item2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:src="@drawable/baidu"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/fragment_bottom2"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_bottom_item3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="match_parent"
                android:src="@drawable/baidu"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:layout_marginBottom="2dp"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/fragment_bottom3"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_bottom_item4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="match_parent"
                android:src="@drawable/baidu"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/fragment_bottom4"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
