<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="bottom">

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/refresh_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/down_refresh"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/state"/>
            <TextView
                android:id="@+id/refresh_last_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/refresh"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toLeftOf="@id/layoutTitle"
        android:layout_toStartOf="@id/layoutTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/refresh"/>

    <ProgressBar
        android:id="@+id/refresh_Progress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toLeftOf="@id/layoutTitle"
        android:layout_toStartOf="@id/layoutTitle"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        style="?android:attr/progressBarStyleSmall"/>

</RelativeLayout>
