<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
         Do not add other element better.-->

        <FrameLayout android:id="@+id/fragment_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

            <!-- bottom navigation-->
            <LinearLayout
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="80dp">

                <LinearLayout
                    android:id="@+id/lyt_bottom_item1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:src="@drawable/baidu"
                        android:layout_gravity="center_horizontal"
                        android:background="@null"
                        android:layout_marginBottom="2dp"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:text="@string/fragment_bottom1"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyt_bottom_item2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:src="@drawable/baidu"
                        android:layout_gravity="center_horizontal"
                        android:background="@null"
                        android:layout_marginBottom="2dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/fragment_bottom2"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyt_bottom_item3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="match_parent"
                        android:src="@drawable/baidu"
                        android:layout_gravity="center_horizontal"
                        android:background="@null"
                        android:layout_marginBottom="2dp"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:text="@string/fragment_bottom3"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyt_bottom_item4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="match_parent"
                        android:src="@drawable/baidu"
                        android:layout_gravity="center_horizontal"
                        android:background="@null"
                        android:layout_marginBottom="2dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/fragment_bottom4"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
            </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.liu.easyenglishupdate.ui.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
